syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "Agent.proto";
import "UUID.proto";

service ConversationController {
    rpc CreateConversation(CreateConversationRequest) returns (CreateConversationResponse) {}
    rpc GetConversation(GetConversationRequest) returns (GetConversationResponse) {}
    rpc ListConversations(ListConversationsRequest) returns (ListConversationsResponse) {}
    rpc UpdateConversation(UpdateConversationRequest) returns (UpdateConverastionResponse) {}
    rpc DeleteConversation(DeleteConversationRequest) returns (DeleteConversationResponse) {}
}

message Chathistory {
    string content = 1;
    string message_type = 2;
}

message Conversation {
    UUID id = 1;
    repeated Chathistory chat_history = 2;
    bool is_use_internal_knowledge = 3;
    Agent agent = 4;
    UUID user_id = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CreateConversationRequest {
    Conversation conversation = 1;
}

message CreateConversationResponse {
    UUID id = 1;
}

message GetConversationRequest {
    UUID id = 1;
}

message GetConversationResponse {
    Conversation conversation = 1;
}

message ListConversationsRequest {
}

message ListConversationsResponse {
    repeated Conversation conversations = 1;
}

message UpdateConversationRequest {
    Conversation conversation = 1;
}

message UpdateConverastionResponse {
}

message DeleteConversationRequest {
    UUID id = 1;
}

message DeleteConversationResponse {
}
