syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "UUID.proto";
import "User.proto";

service LlmModelController {
    rpc CreateLlmModel(CreateLlmModelRequest) returns (CreateLlmModelResponse) {}
    rpc GetLlmModel(GetLlmModelRequest) returns (GetLlmModelResponse) {}
    rpc ListLlmModels(ListLlmModelsRequest) returns (ListLlmModelsResponse) {}
    rpc UpdateLlmModel(UpdateLlmModelRequest) returns (UpdateLlmModelResponse) {}
    rpc DeleteLlmModel(DeleteLlmModelRequest) returns (DeleteLlmModelResponse) {}
}

message LlmModel {
    UUID id = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    string llm_name = 4;
    string provider = 5;
    string model_version = 6;
    string api_key = 7;
    User user = 8;
}

message CreateLlmModelRequest {
    LlmModel llmmodel = 1;
}

message CreateLlmModelResponse {
    UUID id = 1;
}

message GetLlmModelRequest {
    UUID id = 1;
}

message GetLlmModelResponse {   
    LlmModel llmmodel = 1;
}

message ListLlmModelsRequest {
}

message ListLlmModelsResponse {
    repeated LlmModel llmmodels = 1;
}

message UpdateLlmModelRequest {
    LlmModel llmmodel = 1;
}

message UpdateLlmModelResponse {
}

message DeleteLlmModelRequest {
    UUID id = 1;
}

message DeleteLlmModelResponse {
}
